Update 'x20zy1u4d-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-602111bb07.tcz4.p3.openshiftapps.com/rhtap/rhtap-qe:724446cfbdb32530cbcf9327649e7d89d5a21c5d@sha256:9e72d3f81bf571cc0554750b4a03a52efada4a4d2685f98ea71b875b2b68eeb1

--- a/components/x20zy1u4d-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/x20zy1u4d-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x20zy1u4d-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-602111bb07.tcz4.p3.openshiftapps.com/rhtap/rhtap-qe:724446cfbdb32530cbcf9327649e7d89d5a21c5d@sha256:9e72d3f81bf571cc0554750b4a03a52efada4a4d2685f98ea71b875b2b68eeb1
+          name: container-image
